== 2.7.24 ==
Release date: July 10, 2024
* Enhancement: Logo Carousel - Added option to set width, height and object fit properties for logos
* Fixed: Image Comparison - Labels were not showing
* Fixed: Info Grid & Carousel - Coverflow effect was not showing correct number of slides

== 2.7.23 ==
Release date: July 5, 2024
* Enhancement: Added support for Elementor's Element Caching feature
* Enhancement: Added support for Elementor custom breakpoints in all carousel/slider widgets
* Enhancement: Counter - Replaced Odometer JS lib with jQuery Numerator JS lib as used by Elementor
* Enhancement: Counter - Added Underline and Apostrophe separator options
* Enhancement: Performance improvements

== 2.7.22 ==
Release date: June 19, 2024
* Enhancement: Posts - Added support for WPML
* Enhancement: Random Image - Added support for WPML

== 2.7.21 ==
Release date: June 12, 2024
* Enhancement: Team Member - Added X icons to recommended list
* Enhancement: Team Member Carousel - Replaced Twitter icon with X icon
* Security Fix: Link Effects - Improved code security

== 2.7.20 ==
Release date: May 29, 2024
* Fixed: Info Grid & Carousel - Pause on Hover option was not working
* Fixed: Info Grid & Carousel - Equal Height option for Coverflow effect
* Security Fix: Animated Gradient Background - Improved code security

== 2.7.19 ==
Release date: March 27, 2024
* Fixed: Info Box - Icon hover Border Color option was not working
* Fixed: Fluent Forms - Submit button alignment was not working
* Fixed: Fluent Forms - Option to hide the labels was not working

== 2.7.18 ==
Release date: March 18, 2024
* Fixed: Counter - Subtitle was not showing in editor
* Fixed: Info Box - Image shrink issue with left and right alignment
* Security Fix: Improved code security in PowerPack widgets

== 2.7.17 ==
Release date: March 1, 2024
* Fixed: Team Member Carousel - JS error in editor when link is added
* Fixed: Display Conditions - JS error in editor when display condition used on a container
